# email-prototype

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  main.rs
